# rust-usage-accountant

./: .craft.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pre-commit.yaml  rust-ci.yaml  rust-release.yaml
examples/: simple_accountant.rs  simple_produce.rs
src/: accountant.rs  accumulator.rs  kafka.rs  lib.rs  producer.rs
