[package]
name = "sentry_usage_accountant"
description = """
A library the Sentry application uses to account for usage
of shared system resources broken down by feature.
"""
license = "Apache-2.0"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.31"
rdkafka = "0.29.0"
thiserror = "1.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "time"]}
