[package]
name = "sentry_usage_accountant"
description = """
A library the Sentry application uses to account for usage
of shared system resources broken down by feature.
"""
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/sentry_usage_accountant"
repository = "https://github.com/getsentry/rust-usage-accountant"
readme = "README.md"

[features]
kafka = ["dep:rdkafka"]

[dependencies]
chrono = "0.4.31"
rdkafka = { version = ">=0.29.0, <0.37.0", optional = true }
thiserror = "1.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"

[dev-dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "time"]}

[[example]]
name = "simple_produce"
required-features = ["kafka"]

[[example]]
name = "simple_accountant"
required-features = ["kafka"]

[package.metadata."docs.rs"]
all-features = true
